--- a/app/components/form-fields/single-select-field/single-select.component.html
+++ b/app/components/form-fields/single-select-field/single-select.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="field" class="form-group label-floating select-component always-visible">
     <label class="control-label">{{options.title}}</label>
     <select class="custompicker"
-            title="{{options.default}}"
+            title="{{field.value.Name || options.default}}"
             [formControl]="field"
             data-style="select-with-transition"
             data-size="3">
