--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -67,7 +67,7 @@
                         <div class="tab-content m-l-r-20-negative m-t-25">
                             <!--  Property Info  -->
                             <div id="metatab-info" class="card-content p-b-none p-l-r-none p-t-none">
-                                <propertyinfo-cmp *ngIf="!propertiesService.isReading"
+                                <propertyinfo-cmp *ngIf="!propertiesService.isReading && !lookupsService.isReading"
                                                   [group]="propertyForm"
                                                   [errorForm]="errorForm"></propertyinfo-cmp>
                             </div>
