--- a/app/pages/properties/properties.component.html
+++ b/app/pages/properties/properties.component.html
@@ -1,6 +1,6 @@
 <div class="main-content">
     <div class="container-fluid">
-        <div class="toolbar row">
+        <div class="toolbar row" *ngIf="loginService.getPermission('Properties/Post')">
             <div class="col-xs-12">
                 <button class="btn btn-simple btn-success btn-icon pull-right secondary-color shadow-grey"
                         [routerLink]="['addproperty']"><i class="material-icons">add</i> Add Property
@@ -73,18 +73,26 @@
                                             <div class="property-status active" *ngIf="item.Active">Active</div>
                                         </td>
                                         <td class="text-right">
-                                            <button class="btn btn-simple btn-set-rates btn-icon"
+                                            <button *ngIf="loginService.getPermission('Properties/Post')"
+                                                    class="btn btn-simple btn-set-rates btn-icon"
                                                     [routerLink]="['/properties/setrates', item.Id]">
                                                 <i class="material-icons">attach_money</i>Set Rates
                                             </button>
-                                            <button class="btn btn-simple btn-edit btn-icon"
+                                            <button *ngIf="loginService.getPermission('Properties/Put')"
+                                                    class="btn btn-simple btn-edit btn-icon"
                                                     [routerLink]="['/properties/editproperty', item.Id]">
                                                 <i class="material-icons">edit</i>Edit
                                             </button>
-                                            <button class="btn btn-simple btn-delete btn-icon"
+                                            <button *ngIf="loginService.getPermission('Properties/Delete')"
+                                                    class="btn btn-simple btn-delete btn-icon"
                                                     type="button"
                                                     (click)="removeProperty({index: i, propertyId: item.Id})">
                                                 <i class="material-icons">delete</i>Remove
+                                            </button>
+                                            <button *ngIf="!loginService.getPermission('Properties/Put')"
+                                                    class="btn btn-simple btn-edit btn-icon"
+                                                    [routerLink]="['/properties/editproperty', item.Id]">
+                                                <i class="material-icons">remove_red_eye</i>View
                                             </button>
                                         </td>
                                         <td></td>
@@ -101,7 +109,7 @@
             <!-- end col-md-12 -->
         </div>
         <!-- end row -->
-        <div class="toolbar row">
+        <div class="toolbar row" *ngIf="loginService.getPermission('Properties/Post')">
             <div class="col-xs-12">
                 <button class="btn btn-simple btn-success btn-icon pull-right secondary-color shadow-grey"
                         [routerLink]="['addproperty']"><i class="material-icons">add</i> Add Property
