--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -37,14 +37,14 @@
             <div [formGroup]="propertyForm">
                 <div class="row">
                     <div class="col-xs-4">
-                        <singleselect-field-cmp *ngIf="lookupsService.companies.length"
-                                                [dataList]="lookupsService.companies"
+                        <singleselect-field-cmp *ngIf="propertiesService.companies.length"
+                                                [dataList]="propertiesService.companies"
                                                 [options]="{title: 'Management Company', default: 'Select Company'}"
                                                 [field]="propertyForm.controls.ManagementCompany"></singleselect-field-cmp>
                     </div>
                     <div class="col-xs-4">
-                        <singleselect-field-cmp *ngIf="lookupsService.managers.length"
-                                                [dataList]="lookupsService.managers"
+                        <singleselect-field-cmp *ngIf="propertiesService.managers.length"
+                                                [dataList]="propertiesService.managers"
                                                 [options]="{title: 'Managers List', default: 'Select Managers'}"
                                                 [field]="propertyForm.controls.ManagerUser"></singleselect-field-cmp>
                     </div>
@@ -90,7 +90,7 @@
                                    formControlName="Region"
                                    [(ngModel)]="propertyForm.controls.Region.value"
                                    [max-num-list]="10"
-                                   [source]="propertiesService.regionArray"
+                                   [source]="propertiesService.regions"
                                    [list-formatter]="autocompleListFormatter"
                                    (valueChanged)="regionChanged($event)"
                                    value-property-name="Id"
@@ -159,7 +159,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <div *ngIf="!propertiesService.isReading && propertiesService.metadata[4]">
+                        <div *ngIf="!propertiesService.isReading">
                             <property-metafilter-cmp [group]="propertyForm" [metadata]="propertiesService.metadata[4]" #villadescription></property-metafilter-cmp>
                         </div>
                     </div>
