--- a/app/components/meta-filter-heading/meta-filter-heading.component.html
+++ b/app/components/meta-filter-heading/meta-filter-heading.component.html
@@ -56,7 +56,7 @@
                                class="checkbox"/>
                     </label>
                 </td>
-                <td class="form-group text-center"> {{control.controls.PointOfInterestTypeName.value}} {{i}}</td>
+                <td class="form-group text-center"> {{control.controls.PointOfInterestTypeName.value}}</td>
                 <td class="form-group text-left">
                     <input type="text"
                            [attr.type-id]="index"
@@ -68,7 +68,6 @@
                            min="0"
                            [attr.type-id]="index"
                            class="distance form-control"
-                           value="0"
                            [formControl]="control.controls.Distance"/>
                 </td>
             </tr>
