--- a/app/pages/message/enquiry/enquiry.component.html
+++ b/app/pages/message/enquiry/enquiry.component.html
@@ -4,35 +4,118 @@
             <div class="card-content p-l-r-none p-t-none">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="messages-wrp">
-                            <div class="messages">
-                                <div class="date-line">
-                                    28 Jun 2017
-                                </div>
-                                <div class="message from">
-                                    <div class="message-text">
-                                        Hello! There is a request for Villa Name in Ibiza. They would like to book 12/06/17 - 15/06/17. Please tell me if all conditions are suitable. Thank you.
+                        <div class="messages-container">
+                            <div class="messages-wrp">
+                                <div class="messages">
+                                    <div class="date-line">
+                                        28 Jun 2017
                                     </div>
-                                    <div class="message-date">1:38 pm</div>
-                                </div>
-                                <div class="message to">
-                                    <div class="message-text">
-                                        Hi! Thanks for your message, everything is fine. I’m going to approve your enquiry and will be waiting for payment. Thank you!
+                                    <div class="message from">
+                                        <div class="message-text">
+                                            Hello! There is a request for Villa Name in Ibiza. They would like to book
+                                            12/06/17 - 15/06/17. Please tell me if all conditions are suitable. Thank
+                                            you.
+                                        </div>
+                                        <div class="message-date">1:38 pm</div>
                                     </div>
-                                    <div class="message-date pull-left">Read at 1:42 pm</div>
-                                    <div class="message-date">1:38 pm</div>
-                                </div>
-                                <div class="message from">
-                                    <div class="message-text">
-                                        Hello! There is a request for Villa Name in Ibiza. They would like to book 12/06/17 - 15/06/17. Please tell me if all conditions are suitable. Thank you.
+                                    <div class="message to">
+                                        <div class="message-text">
+                                            Hi! Thanks for your message, everything is fine. I’m going to approve your
+                                            enquiry and will be waiting for payment. Thank you!
+                                        </div>
+                                        <div class="message-date pull-left">Read at 1:42 pm</div>
+                                        <div class="message-date">1:38 pm</div>
                                     </div>
-                                    <div class="message-date">1:38 pm</div>
-                                </div>
-                                <div class="message info">
-                                    <div class="message-text">
-                                        Proposal has been updated
+                                    <div class="message from">
+                                        <div class="message-text">
+                                            Hello! There is a request for Villa Name in Ibiza. They would like to book
+                                            12/06/17 - 15/06/17. Please tell me if all conditions are suitable. Thank
+                                            you.
+                                        </div>
+                                        <div class="message-date">1:38 pm</div>
+                                    </div>
+                                    <div class="message info">
+                                        <div class="message-text">
+                                            <i class="material-icons">info_outline</i> Proposal has been updated
+                                        </div>
+                                    </div>
+                                    <div class="date-line">
+                                        28 Jun 2017
+                                    </div>
+                                    <div class="message from">
+                                        <div class="message-text">
+                                            Hello! There is a request for Villa Name in Ibiza. They would like to book
+                                            12/06/17 - 15/06/17. Please tell me if all conditions are suitable. Thank
+                                            you.
+                                        </div>
+                                        <div class="message-date">1:38 pm</div>
+                                    </div>
+                                    <div class="message to">
+                                        <div class="message-text">
+                                            Hi! Thanks for your message, everything is fine. I’m going to approve your
+                                            enquiry and will be waiting for payment. Thank you!
+                                        </div>
+                                        <div class="message-date pull-left">Read at 1:42 pm</div>
+                                        <div class="message-date">1:38 pm</div>
+                                    </div>
+                                    <div class="message from">
+                                        <div class="message-text">
+                                            Hello! There is a request for Villa Name in Ibiza. They would like to book
+                                            12/06/17 - 15/06/17. Please tell me if all conditions are suitable. Thank
+                                            you.
+                                        </div>
+                                        <div class="message-date">1:38 pm</div>
+                                    </div>
+                                    <div class="message info">
+                                        <div class="message-text">
+                                            <i class="material-icons">info_outline</i> Proposal has been updated
+                                        </div>
+                                    </div>
+                                    <div class="date-line">
+                                        28 Jun 2017
+                                    </div>
+                                    <div class="message from">
+                                        <div class="message-text">
+                                            Hello! There is a request for Villa Name in Ibiza. They would like to book
+                                            12/06/17 - 15/06/17. Please tell me if all conditions are suitable. Thank
+                                            you.
+                                        </div>
+                                        <div class="message-date">1:38 pm</div>
+                                    </div>
+                                    <div class="message to">
+                                        <div class="message-text">
+                                            Hi! Thanks for your message, everything is fine. I’m going to approve your
+                                            enquiry and will be waiting for payment. Thank you!
+                                        </div>
+                                        <div class="message-date pull-left">Read at 1:42 pm</div>
+                                        <div class="message-date">1:38 pm</div>
+                                    </div>
+                                    <div class="message from">
+                                        <div class="message-text">
+                                            Hello! There is a request for Villa Name in Ibiza. They would like to book
+                                            12/06/17 - 15/06/17. Please tell me if all conditions are suitable. Thank
+                                            you.
+                                        </div>
+                                        <div class="message-date">1:38 pm</div>
+                                    </div>
+                                    <div class="message info">
+                                        <div class="message-text">
+                                            <i class="material-icons">info_outline</i> Proposal has been updated
+                                        </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="divider"></div>
+                            <div class="message-send">
+                                <div class="form-group label-floating">
+                                    <label class="control-label">Type in your message</label>
+                                    <input class="form-control">
+                                </div>
+                                <button class="btn btn-just-icon btn-simple btn-send" data-placement="bottom"
+                                        rel="tooltip" title="Send" type="button">
+                                    <i class="material-icons">send</i>
+                                    <div class="ripple-container"></div>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -54,7 +137,7 @@
                                 </div>
                             </div>
                             <div class="villa-container left">
-                            <div class="enquiry-status declined">Declined</div>
+                                <div class="enquiry-status declined">Declined</div>
                                 <h4 class="enquiry-title">Villa Name</h4>
                                 <p class="location"><i class="material-icons">place</i> San Jose</p>
                             </div>
@@ -119,7 +202,8 @@
                             <div class="row">
                                 <div class="col-xs-6">
                                     <div class="input-group">
-                                        <span class="input-group-addon static"><i class="material-icons">person</i></span>
+                                        <span class="input-group-addon static"><i
+                                                class="material-icons">person</i></span>
                                         <div class="form-group label-floating">
                                             <div class="control-label">Customer Name</div>
                                             Mary Johnson
@@ -128,7 +212,8 @@
                                 </div>
                                 <div class="col-xs-6">
                                     <div class="input-group">
-                                        <span class="input-group-addon static"><i class="material-icons">location_city</i></span>
+                                        <span class="input-group-addon static"><i
+                                                class="material-icons">location_city</i></span>
                                         <div class="form-group label-floating">
                                             <div class="control-label">Property</div>
                                             Villa Name
@@ -212,17 +297,23 @@
                             <!--no proposal buttons-->
                             <div class="row">
                                 <div class="col-xs-6">
-                                    <button type="button" class="btn btn-default btn-simple btn-back btn-danger">Cancel</button>
+                                    <button type="button" class="btn btn-default btn-simple btn-back btn-danger">
+                                        Cancel
+                                    </button>
                                 </div>
                             </div>
                             <!--no proposal buttons end-->
                             <!--proposal buttons-->
                             <div class="row">
                                 <div class="col-xs-6">
-                                    <button type="button" class="btn btn-default btn-simple btn-back btn-danger">Decline</button>
+                                    <button type="button" class="btn btn-default btn-simple btn-back btn-danger">
+                                        Decline
+                                    </button>
                                 </div>
                                 <div class="col-xs-6">
-                                    <button type="button" class="btn btn-success pull-right font-16 m-r-20 p-l-r-20">Accept</button>
+                                    <button type="button" class="btn btn-success pull-right font-16 m-r-20 p-l-r-20">
+                                        Accept
+                                    </button>
                                 </div>
                             </div>
                             <!--proposal buttons end-->
