--- a/app/pages/message/enquiry/enquiry.component.css
+++ b/app/pages/message/enquiry/enquiry.component.css
@@ -344,3 +344,17 @@
     font-size: 12px;
     margin-right: 20px;
 }
+
+@media (max-width: 991px) {
+    .messages-container {
+        padding: 52px 24px;
+    }
+
+    .enquiry-header .image-wrp {
+        border-top-right-radius: 0px;
+    }
+
+    .enquiry-header .image-wrp .image-villa:after {
+        border-top-right-radius: 0px;
+    }
+}
