--- a/app/pages/message/enquiry/enquiry.component.html
+++ b/app/pages/message/enquiry/enquiry.component.html
@@ -368,24 +368,30 @@
                             <!--manager terms-->
                             <div class="terms">
                                 <h5>Terms</h5>
-                                <div class="form-group m-none">
-                                    <input type="text" class="form-control" value="Term">
+                                <div class="terms-wrp">
+                                    <div class="form-group m-none">
+                                        <input type="text" class="form-control" value="Term">
+                                    </div>
                                     <button class="btn btn-just-icon btn-simple btn-remove"
                                             rel="tooltip" title="Remove" type="button">
                                         <i class="material-icons">clear</i>
                                         <div class="ripple-container"></div>
                                     </button>
                                 </div>
-                                <div class="form-group m-none">
-                                    <input type="text" class="form-control" value="Term">
+                                <div class="terms-wrp">
+                                    <div class="form-group m-none">
+                                        <input type="text" class="form-control" value="Term">
+                                    </div>
                                     <button class="btn btn-just-icon btn-simple btn-remove"
                                             rel="tooltip" title="Remove" type="button">
                                         <i class="material-icons">clear</i>
                                         <div class="ripple-container"></div>
                                     </button>
                                 </div>
-                                <div class="form-group m-none">
-                                    <input type="text" class="form-control" value="Term">
+                                <div class="terms-wrp">
+                                    <div class="form-group m-none">
+                                        <input type="text" class="form-control" value="Term">
+                                    </div>
                                     <button class="btn btn-just-icon btn-simple btn-remove"
                                             rel="tooltip" title="Remove" type="button">
                                         <i class="material-icons">clear</i>
@@ -394,7 +400,8 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12">
-                                        <button type="button" class="btn btn-default btn-simple btn-back btn-success pull-right">
+                                        <button type="button"
+                                                class="btn btn-default btn-simple btn-back btn-success pull-right">
                                             + Add
                                         </button>
                                     </div>
