Dialog - Manager's view - design implementation (Stage 1) - fixed icons vertical position

--- a/app/pages/message/enquiry/enquiry.component.css
+++ b/app/pages/message/enquiry/enquiry.component.css
@@ -286,6 +286,7 @@
 .enquiry-body .material-icons {
     font-size: 18px;
     color: #5399bc;
+    vertical-align: top;
 }
 
 .enquiry-body .no-proposal {
