--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -43,7 +43,7 @@
                                                 [field]="propertyForm.controls.ManagementCompany"></singleselect-field-cmp>
                     </div>
                     <div class="col-xs-4">
-                        <singleselect-field-cmp *ngIf="propertiesService.managers.length"
+                        <singleselect-field-cmp *ngIf="propertiesService.managers.length || propertyForm.controls.ManagerUser.value"
                                                 [dataList]="propertiesService.managers"
                                                 [options]="{title: 'Managers List', default: 'Select Managers'}"
                                                 [field]="propertyForm.controls.ManagerUser"></singleselect-field-cmp>
