--- a/app/pages/message/enquiry/enquiry.component.html
+++ b/app/pages/message/enquiry/enquiry.component.html
@@ -1,6 +1,32 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="card">
+            <div class="card-header card-header-tabs" data-background-color="darkblue">
+                <div class="nav-tabs-navigation">
+                    <div class="nav-tabs-wrapper">
+                        <ul id="myTabs" class="nav nav-tabs" data-tabs="tabs">
+                            <li class="">
+                                <a href="#notifications" data-toggle="tab">
+                                    <i class="material-icons">notifications</i> Notifications
+                                    <div class="ripple-container"></div>
+                                </a>
+                            </li>
+                            <li class="">
+                                <a href="#enquiries" data-toggle="tab">
+                                    <i class="material-icons">info</i> Enquiries (1)
+                                    <div class="ripple-container"></div>
+                                </a>
+                            </li>
+                            <li class="">
+                                <a href="#bookings" data-toggle="tab">
+                                    <i class="material-icons">confirmation_number</i> Bookings
+                                    <div class="ripple-container"></div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
             <div class="card-content p-l-r-none p-t-none">
                 <!--template begin-->
                 <div class="enquiry-detail">
