--- a/app/pages/message/enquiry/enquiry.component.html
+++ b/app/pages/message/enquiry/enquiry.component.html
@@ -327,7 +327,7 @@
                                         </div>
                                     </div>
                                     <div class="col-xs-6">
-                                        <div class="input-group">
+                                        <div class="input-group booking-price">
                                         <span class="input-group-addon"><i
                                                 class="material-icons">euro_symbol</i></span>
                                             <div class="form-group label-floating">
