--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -381,11 +381,11 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 }
 
 .form-group.label-floating.label-green label.control-label {
-	color: #00c4a4!important;
+	color: #00bfa5!important;
 }
 
 .form-group.label-floating.label-red label.control-label {
-	color: #ff003d!important;
+	color: #ff1744!important;
 }
 
 /**
@@ -404,11 +404,11 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .btn.btn-success-green {
 	min-width: 120px;
 	padding: 12px 15px;
-	background-color: #00c4a4;
+	background-color: #00bfa5;
 	box-shadow: 0px 7px 12px 0 rgba(83, 153, 188, 0.4);
 }
 .btn.btn-success-green:hover, .btn.btn-success-green:active, .btn.btn-success-green:focus, .btn.btn-success-green:focus:active, .btn.btn-success-green:active:hover {
-	background-color: #0b5a7c;
+	background-color: #09907e;
 	box-shadow: 0px 7px 12px 0 rgba(83, 153, 188, 0.4);
 }
 .btn.btn-success.btn-simple,
