Dialog - Manager's view - design implementation (Stage 1) - fixed button on hover color

--- a/app/pages/message/enquiry/enquiry.component.css
+++ b/app/pages/message/enquiry/enquiry.component.css
@@ -390,6 +390,10 @@
     margin: 0;
 }
 
+.enquiry-body .terms .btn-back:hover {
+    background-color: #fafafa;
+}
+
 .enquiry-body .estimated-cost {
     margin-top: 20px;
     margin-bottom: 10px;
