--- a/app/components/villa/villa.component.html
+++ b/app/components/villa/villa.component.html
@@ -64,7 +64,7 @@
                     <i class="material-icons">euro_symbol</i> {{roundRate(villa.TotalRate)}}/night
                 </div>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6" *ngIf="loginService.getPermission('Enquiries/Post')">
                 <button type="button" (click)="openEnquiry(villa)" class="btn btn-success pull-right">Submit enquiry</button>
             </div>
         </div>
